new details activity getting data using parcelable implements

--- a/PopularMovies/app/src/main/AndroidManifest.xml
+++ b/PopularMovies/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity android:name=".MovieDetails">
+      android:parentActivityName="com.example.pranaykumar.popularmovies.MainActivity" >
+      <!-- Parent activity meta-data to support 4.0 and lower -->
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value="com.example.pranaykumar.popularmovies.MainActivity" />
+    </activity>
   </application>
 
 </manifest>
