Displaying details of popular movies from API(Loading images using Picasso)

--- a/PopularMovies/app/build.gradle
+++ b/PopularMovies/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
   compileSdkVersion 25
   buildToolsVersion "25.0.2"
+
   defaultConfig {
     applicationId "com.example.pranaykumar.popularmovies"
     minSdkVersion 15
@@ -18,7 +19,9 @@ android {
     }
   }
 }
-
+repositories {
+  mavenCentral()
+}
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -27,4 +30,5 @@ dependencies {
   compile 'com.android.support:appcompat-v7:25.2.0'
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
   testCompile 'junit:junit:4.12'
+  compile 'com.squareup.picasso:picasso:2.5.2'
 }
