--- a/PopularMovies/app/src/main/AndroidManifest.xml
+++ b/PopularMovies/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.example.pranaykumar.popularmovies">
   <uses-permission android:name="android.permission.INTERNET"></uses-permission>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
@@ -25,6 +24,12 @@
           android:name="android.support.PARENT_ACTIVITY"
           android:value="com.example.pranaykumar.popularmovies.MainActivity" />
     </activity>
+    //Registering content provider
+    <provider
+      android:name="com.example.pranaykumar.popularmovies.data.PopularMoviesContentProvider"
+      android:authorities="com.example.pranaykumar.popularmovies"
+      android:exported="false"/>
+
   </application>
 
 </manifest>
