--- a/PopularMovies/app/src/main/AndroidManifest.xml
+++ b/PopularMovies/app/src/main/AndroidManifest.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pranaykumar.popularmovies">
-  <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+  package="com.example.pranaykumar.popularmovies">
+
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
   <application
-      android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
-      android:label="@string/app_name"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:supportsRtl="true"
-      android:theme="@style/AppTheme">
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme">
     <activity android:name=".MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
@@ -18,19 +19,20 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name=".MovieDetails">
+    <activity android:name=".MovieDetailsActivity">
       android:parentActivityName="com.example.pranaykumar.popularmovies.MainActivity" >
       <!-- Parent activity meta-data to support 4.0 and lower -->
       <meta-data
-          android:name="android.support.PARENT_ACTIVITY"
-          android:value="com.example.pranaykumar.popularmovies.MainActivity" />
+        android:name="android.support.PARENT_ACTIVITY"
+        android:value="com.example.pranaykumar.popularmovies.MainActivity"/>
+    </activity>
+    <activity android:name=".FavouriteMoviesActivity">
     </activity>
     //Registering content provider
     <provider
-      android:name="com.example.pranaykumar.popularmovies.data.PopularMoviesContentProvider"
       android:authorities="com.example.pranaykumar.popularmovies"
-      android:exported="false"/>
+      android:exported="false"
+      android:name=".data.PopularMoviesContentProvider"/>
   </application>
-
 
 </manifest>
