--- a/PopularMovies/app/src/main/AndroidManifest.xml
+++ b/PopularMovies/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     </activity>
     <activity android:name=".MovieDetailsActivity">
       android:parentActivityName="com.example.pranaykumar.popularmovies.MainActivity" >
+      android:launchMode="singleTop"
       <!-- Parent activity meta-data to support 4.0 and lower -->
       <meta-data
         android:name="android.support.PARENT_ACTIVITY"
