--- a/PopularMovies/app/src/main/AndroidManifest.xml
+++ b/PopularMovies/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
+      <meta-data
+        android:name="android.app.searchable"
+        android:resource="@xml/searchable"/>
     </activity>
     <activity android:name=".MovieDetailsActivity">
       android:parentActivityName="com.example.pranaykumar.popularmovies.MainActivity" >
@@ -26,6 +29,7 @@
       <meta-data
         android:name="android.support.PARENT_ACTIVITY"
         android:value="com.example.pranaykumar.popularmovies.MainActivity"/>
+
     </activity>
     <activity android:name=".FavouriteMoviesActivity">
     </activity>
